# arsenic

./: .gitignore  Cargo.toml  README.md  example_report_llama_upgrade.html  example_report_llama_upgrade.json  report_openai_upgrade.html  report_openai_upgrade.json
.github/workflows/: release.yaml
crates/arsenic/: Cargo.toml
crates/arsenic-adapters/: Cargo.toml
crates/arsenic-adapters/src/: anthropic.rs  caching.rs  google.rs  lib.rs  openai.rs  registry.rs
crates/arsenic-cli/src/: main.rs  model_download.rs  reconcile.rs
crates/arsenic-core/: Cargo.toml
crates/arsenic-core/src/: adapter.rs  cache.rs  category_infer.rs  claim.rs  claim_stopwords.txt  comparison.rs  embedding.rs  error.rs  lib.rs  morphology.rs  mutation.rs  reconcile.rs  reconcile_engine.rs  refusal.rs  runner.rs  semantic.rs  tone.rs  types.rs
crates/arsenic-probes/: Cargo.toml
crates/arsenic-probes/src/: lib.rs  loader.rs
crates/arsenic-report/: Cargo.toml  build.rs
crates/arsenic-report/fixtures/: report_openai_upgrade.json
crates/arsenic-report/src/: lib.rs  reconcile_report.rs
crates/arsenic/src/: baseline_cmd.rs  main.rs  mutation_validate.rs  reconcile.rs
examples/: gpt-4o-mini_vs_gpt-4.1-mini.html  gpt-4o-mini_vs_gpt-4.1-mini_json_schema.html  gpt-4o-mini_vs_gpt-4_1-mini_ai_assesment.html  gpt-4o-mini_vs_gpt-4_1-mini_code_generation.html  gpt-4o-mini_vs_gpt-4_1-mini_reasoning.html  gpt-4o-mini_vs_gpt-4_1-mini_sycophancy.html  llama3.1-8b_vs_llama3.2-3b.html
examples/ci/: README.md  github-actions.yaml
probe-suite/: README.md
probe-suite/ai-assessment/: ai-assessment-probe-README.md  ai-assessment.toml
probe-suite/code-generation/: code-generation.toml
probe-suite/extreme-edge/: extreme-edge-probe-README.md  extreme-edge.toml
probe-suite/json-schema/: json-schema.toml
probe-suite/rag-drift/: rag-drift-probe-README.md  rag-drift.toml
probe-suite/reasoning-chains/: reasoning-chains.toml
probe-suite/standard/: factual.toml  instruction.toml  morphology.toml  refusal.toml  schema.toml  semantic.toml  tone.toml
probe-suite/sycophancy/: sycophancy-probe-README.md  sycophancy.toml
report-templates/: reconcile.html.tera  report.html.tera  report.md.tera
