[workspace]
members = [
    "crates/arsenic-core",
    "crates/arsenic-probes",
    "crates/arsenic-adapters",
    "crates/arsenic-report",
    "crates/arsenic",
]
default-members = ["crates/arsenic"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "Apache-2.0"
repository = "https://github.com/markndg/arsenic"
homepage = "https://github.com/markndg/arsenic"
readme = "README.md"
keywords = ["llm", "drift", "evaluation", "testing", "regression"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tera = "1"
unicode-segmentation = "1"
rayon = "1"
futures = "0.3"
async-trait = "0.1"
regex = "1"
walkdir = "2"
indicatif = "0.17"
colored = "2"
futures-util = "0.3"
sha2 = "0.10"
