[package]
name = "arsenic-adapters"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ARSENIC model endpoint adapters"

[dependencies]
arsenic-core = { path = "../arsenic-core" }
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
uuid.workspace = true
