[package]
name = "arsenic-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "ARSENIC types, metrics, and comparison engine for LLM behavioural drift"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
# Spec lists regex at workspace level; core needs it for tone + refusal heuristics.
regex = { workspace = true }
