[package]
name = "arsenic-probes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ARSENIC probe suite loader"

[dependencies]
arsenic-core = { path = "../arsenic-core" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
uuid.workspace = true
walkdir.workspace = true
