[package]
name = "arsenic-probes"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "ARSENIC probe suite loader (TOML probe corpus parsing)"

[dependencies]
arsenic-core = { path = "../arsenic-core", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
uuid.workspace = true
walkdir.workspace = true
