[package]
name = "arsenic-report"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ARSENIC drift report rendering"

[dependencies]
arsenic-core = { path = "../arsenic-core" }
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
anyhow.workspace = true
