[package]
name = "arsenic-report"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["development-tools::testing"]
description = "ARSENIC drift report rendering (HTML / JSON / Markdown)"

[dependencies]
arsenic-core = { path = "../arsenic-core", version = "0.3.0" }
serde.workspace = true
serde_json.workspace = true
tera.workspace = true
anyhow.workspace = true
