[package]
name = "arsenic-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "ARSENIC command-line interface"

[[bin]]
name = "arsenic"
path = "src/main.rs"

[dependencies]
arsenic-core = { path = "../arsenic-core" }
arsenic-probes = { path = "../arsenic-probes" }
arsenic-adapters = { path = "../arsenic-adapters" }
arsenic-report = { path = "../arsenic-report" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid.workspace = true
indicatif.workspace = true
colored.workspace = true
reqwest.workspace = true
futures-util.workspace = true
sha2.workspace = true
