[package]
name = "arsenic"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories = ["command-line-utilities", "development-tools::testing"]
description = "ARSENIC — detect behavioural drift between LLM versions before production upgrades"

[[bin]]
name = "arsenic"
path = "src/main.rs"

[dependencies]
arsenic-core = { path = "../arsenic-core", version = "0.3.0" }
arsenic-probes = { path = "../arsenic-probes", version = "0.3.0" }
arsenic-adapters = { path = "../arsenic-adapters", version = "0.3.0" }
arsenic-report = { path = "../arsenic-report", version = "0.3.0" }
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid.workspace = true
indicatif.workspace = true
colored.workspace = true
reqwest.workspace = true
futures-util.workspace = true
futures.workspace = true
chrono.workspace = true
sha2.workspace = true
